#####################
Nagios 2.x Change Log
#####################


2.10 - ??/??/2007
------------------
* Added 'make install-webconf' command to install Apache web config file
* Sample config files are now installed without a -sample extension
* Fix for SIGTERMs being seen as SIGEXITs, non-logging of SIGTERMs/shutdowns
* Minor fix for notification timeout log messages



2.9 - 04/10/2007
----------------
* Fix for incorrect performance data file write/append mode options
* Fix for current status of hosts with no host check command defined
* SIGSEGV signals should now be logged again (broken in 2.8)
* Configure script fix for no mail program found/installed on system
* Configure script option bug fixes for cygwin and embedded perl
* Command definitions and host/service plugin perfdata with HTML should now be escaped in CGIs
* Patch for incorrect time down percentage in availability CGI
* Updated init script to fix a race condition during restarts



2.8 - 03/08/2007
------------------
* Bug fix for calculating notification interval with service escalations
* Bug fix for using servicegroups in service dependency definitions
* Bug fix for bad date format submission in command CGI
* Possible segfault fix during restarts when daemon was performing host checks
* Fix for missing check timeout in event broker calls
* Fix for handling signals under NPTL
* Added error messages for passive service checks that don't correspond to a defined service



2.7 - 01/19/2007
----------------
* p1.pl now sets environment var (NAGIOS_PLUGIN) to indicate patch of plugin that is executing
* Updated nagiostats with new MRTG vars for tracking buffer usage
* Added sample MRTG config file
* Minor patches to availability and status CGIs
* Minor documentation updates
* Fix for segfault during expiration or deletion of scheduled downtime
* Fix for scheduling immediate service check through WAP interface
* Fix for leading whitespace before comments in object config files



2.6 - 11/27/2006